Fix form widths, masthead padding on desktop, anchor spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -510,6 +510,12 @@ div.solid.background p {
   font-style: italic;
   color: #77797B; }
 
+a.anchor {
+  display: block;
+  position: relative;
+  top: -6em;
+  visibility: hidden; }
+
 html,
 body {
   font-family: Open Sans, sans-serif;
@@ -727,12 +733,6 @@ textarea {
 textarea {
   height: 10em; }
 
-input {
-  width: 100%; }
-
-textarea {
-  width: 100%; }
-
 button {
   display: inline;
   background: #00447B;
@@ -923,6 +923,8 @@ nav .contact {
     margin-top: 0; }
     main article.road.background {
       min-height: 50vh; }
+    main article {
+      padding-top: 0; }
   #menu {
     margin-top: 0;
     position: relative;
@@ -952,6 +954,8 @@ nav .contact {
     margin-top: 0; }
     main article.road.background {
       min-height: calc(100vh - 320px); }
+    main article {
+      padding-top: 0; }
   #menu {
     margin-top: 0;
     position: relative;
@@ -981,6 +985,8 @@ nav .contact {
     margin-top: 0; }
     main article.road.background {
       min-height: calc(100vh - 550px); }
+    main article {
+      padding-top: 0; }
   #menu {
     margin-top: 0;
     position: relative;
