--- a/resources/assets/sass/layout/_forms.scss
+++ b/resources/assets/sass/layout/_forms.scss
@@ -10,9 +10,3 @@ textarea {
 textarea {
   height: 10em;
 }
-input {
-  width: 100%;
-}
-textarea {
-  width: 100%;
-}
